<resources>
    <string name="app_name">부킹투나잇</string>
    <string name="duration">200</string>
    <string name="today_hotel">오늘의 호텔</string>
    <string name="tommorrow_hotel">내일의 호텔</string>
    <string name="select_date">날짜선택</string>
    <string name="footer_txt_4">© 2016 부킹투나잇, BookingToNight Inc.</string>
    <string name="wait_message">잠시 후 %1$s시부터 예약 가능</string>
    <string name="sold_out">객실이 모두 매진되었습니다.</string>
    <string name="hotel_distance">약 %1$s 거리</string>
    <string name="remain_room">딱 %1$s 객실 남음!</string>
    <string name="wait_price_setting">가격 협상중…</string>
    <string name="free_event">무료 숙박 이벤트</string>
    <string name="select_roomtype">룸타입 선택하기</string>
    <string name="price">%1$s원</string>
    <string name="roomtype_cnt">%1$s개의 룸타입</string>
    <string name="price_from">%1$s원 부터</string>
    <string name="event_apply">이벤트 응모하기</string>
    <string name="wait_message2">오전 %1$s시부터 예약할 수 있습니다.</string>
    <string name="sell_waiting">판매 대기중</string>
    <string name="sell_complete">판매 완료</string>
    <string name="remain_room_cnt">딱 %1$s 객실 남음</string>
    <string name="booking_now">지금 예약하기</string>
    <string name="no_reservation">예약내역이 없습니다.</string>
    <string name="checkin">체크인</string>
    <string name="checkout">체크아웃</string>
    <string name="error_booking_info">예약 정보를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="coupon_explain">쿠폰을 입력하고 할인 혜택을 누려보세요!</string>
    <string name="error_coupon_money">쿠폰 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="show_distance">거리순으로 호텔보기</string>
    <string name="push_setting">알림 메시지 받기</string>
    <string name="service_agreement">서비스 이용약관</string>
    <string name="userinfo_agreement">개인정보 취급방침</string>
    <string name="location_agreement">위치기반서비스 이용약관</string>
    <string name="version">현재버전</string>
    <string name="cs_center">고객센터 : 070–4481–5541</string>
    <string name="notice">공지사항</string>
    <string name="send_email">이메일로 의견보내기</string>
    <string name="hotelnow_address">"봉봉랩(주) 대표: 김가영 사업자번호: 215–87–79454
통신판매업번호: 제2013–서울송파–0752호
© 2015 Bonbonlab Inc. All rights reserved."</string>
    <string name="logout_loading">로그아웃 중…</string>
    <string name="error_connect_problem">접속이 원활하지 않습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="normal_price">정상가</string>
    <string name="sale_price">할인가</string>
    <string name="room_info">객실정보</string>
    <string name="do_reservation">예약하기</string>
    <string name="event">이벤트</string>
    <string name="year_month_day_weekday_format">yyyy년 MM월 dd일 (E)</string>
    <string name="year_month_day_weekday_format2">yyyy.MM.dd(E)</string>
    <string name="year_month_day_weekday_format3">MM월 dd일 (E)</string>
    <string name="invalid_date">선택할 수 없는 날짜입니다.</string>
    <string name="area_select_text_01">전체보기</string>
    <string name="area_select_text_02">서울</string>
    <string name="area_select_text_03">경기</string>
    <string name="area_select_text_04">인천</string>
    <string name="area_select_text_05">부산</string>
    <string name="area_select_text_06">제주</string>
    <string name="area_select_text_07">강원</string>
    <string name="area_select_text_08">대전</string>
    <string name="area_select_text_09">충청</string>
    <string name="area_select_text_10">대구</string>
    <string name="area_select_text_11">경상</string>
    <string name="area_select_text_12">울산</string>
    <string name="area_select_text_13">광주</string>
    <string name="area_select_text_14">전라</string>
    <string name="area_select_text_15">지역</string>
    <string name="no_email_program">E-Mail을 전송 할 수 있는 프로그램이 없습니다.</string>
    <string name="forget_password"><u>비밀번호를 잊어버리셨나요?</u></string>
    <string name="sign_in"><u>아직 부킹투나잇회원이 아니세요?</u></string>
    <string name="email">이메일/아이디</string>
    <string name="password">비밀번호</string>
    <string name="ask_already_not_member">아직 회원이 아니세요?</string>
    <string name="ask_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="login_complete">로그인 되었습니다.</string>
    <string name="validator_user_not_match">이메일 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="login_loading">로그인 중…</string>
    <string name="validator_email">이메일을 입력해주세요.</string>
    <string name="validator_email_invalid">올바른 이메일이 아닙니다.</string>
    <string name="validator_password">비밀번호를 입력해 주세요.</string>
    <string name="password_hint">4글자 이상</string>
    <string name="capcha_hint">왼쪽 숫자를 입력해주세요.</string>
    <string name="password_full_hint">[필수]비밀번호 (4자 이상)</string>
    <string name="name_hint">이름 (체크인시 사용)</string>
    <string name="service_agreement_checkbox">서비스 이용약관 동의</string>
    <string name="see_content">(내용보기)</string>
    <string name="userinfo_agreement_checkbox">개인정보 취급방침 동의</string>
    <string name="location_agreement_checkbox">위치기반서비스 이용약관 동의</string>
    <string name="caution_agreement_checkbox">주의사항 및 개인정보 제3자 제공 동의</string>
    <string name="ask_already_member">이미 회원이신가요?</string>
    <string name="error_capcha_img">캡챠 이미지를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="join_finish">회원 가입이 완료되었습니다.</string>
    <string name="error_member_join">가입 처리가 완료되지 않았습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="validator_password_length">4글자 이상의 비밀번호를 입력해 주세요.</string>
    <string name="validator_name_length">2글자 이상의 이름을 입력해 주세요.</string>
    <string name="validator_pnum">전화번호를 입력해 주세요.</string>
    <string name="validator_capcha">이미지 문자를 입력해주세요.</string>
    <string name="validator_service_agreement">서비스 이용약관에 동의해 주세요.</string>
    <string name="validator_userinfo_agreement">개인정보취급방침에 동의해 주세요.</string>
    <string name="validator_location_agreement">위치기반서비스 이용약관에 동의해 주세요.</string>
    <string name="reset_password_click">[클릭]</string>
    <string name="ask_already_not_member2">아직 회원이 아니세요? 아래 버튼을 클릭하세요.</string>
     <string name="insert_userinfo">"구매자와 사용자가 다를 경우,
체크인하는 분의 이름과 연락처를 입력해주세요."</string>
    <string name="name">이름</string>
    <string name="contects">연락처</string>
    <string name="discount_amount">할인금액</string>
    <string name="reserve_money_use">적립금사용</string>
    <string name="coupon_use">쿠폰사용</string>
    <string name="total_price">총 결제금액</string>
    <string name="price_explain">* 세금 및 봉사료가 모두 포함된 금액입니다.</string>
    <string name="paytype1">카드/계좌이체/가상계좌</string>
    <string name="paytype2">휴대폰결제</string>
    <string name="paytype3">ARS 결제</string>
    <string name="payment">결제하기</string>
    <string name="error_product_user_info">상품 및 회원정보를 확인 할 수 없습니다. 앱 재시작 또는 재로그인 해 주세요.</string>
    <string name="cancel_rule">취소규정 안내</string>
    <string name="agree">동의</string>
    <string name="not_agree">동의안함</string>
    <string name="alert_notice">알림</string>
    <string name="alert_close">닫기</string>
    <string name="need_caution_agree">주의사항 및 개인정보 제3자 제공 동의는 필수항목입니다.</string>
    <string name="alert_confrim">확인</string>
    <string name="alert_yes">예</string>
    <string name="alert_no">아니오</string>
    <string name="my_reserve_money">나의 적립금</string>
    <string name="receive_alert">알림받기</string>
    <string name="error_booking_fail">예약을 완료하지 못했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="guide_btn_skip">건너뛰기</string>
    <string name="guide_btn_start">시작</string>
    <string name="guide_title_1">당일 호텔 예약</string>
    <string name="guide_title_2">엄선된 호텔</string>
    <string name="guide_title_3">쉽고 빠른 결제</string>
    <string name="guide_title_4">놀라운 가격</string>
    <string name="guide_desc_1">"사전 예약보다 편리하고 저렴하게
오늘의 호텔을 예약하세요."</string>
    <string name="guide_desc_2">"고객 만족도와 할인율을 바탕으로,
가장 매력적인 호텔만을 제시합니다."</string>
    <string name="guide_desc_3">"오전 9시에서 새벽 2시까지
30초만에 예약하고 바로 체크인하세요."</string>
    <string name="guide_desc_4">"오늘 남은 객실만을 판매하기에
가장 저렴할 수 밖에 없습니다.

그럼 오늘의 호텔을 만나볼까요?"</string>
    <string name="prefix_wait_timer_frag_todays_hotel_open">시, 오늘의 호텔을 공개합니다.</string>
    <string name="frag_wait_timer_hotel_msg">"잊지못할 하루를 위한
특별한 호텔이 기다리고 있어요"</string>
    <string name="frag_wait_timer_on">알람 받기</string>
    <string name="frag_wait_timer_fnb_msg">"잊지못할 하루를 위한
특별한 레스토랑이 기다리고 있어요"</string>
    <string name="frag_wait_timer_off">알람 끄기</string>
    <string name="frag_wait_timer_set">알람이 설정되었습니다</string>
    <string name="frag_wait_timer_cancel">알람이 취소되었습니다</string>
    <string name="frag_hotel_list_check">CHEC</string>
    <string name="frag_hotel_list_checkin">K - IN</string>
    <string name="frag_hotel_list_checkout">K - OUT</string>
    <string name="frag_hotel_days_tab_to">TO</string>
    <string name="Monday">월</string>
    <string name="Tuesday">화</string>
    <string name="Wednesday">수</string>
    <string name="Thursday">목</string>
    <string name="Friday">금</string>
    <string name="Saturday">토</string>
    <string name="Sunday">일</string>
    <string name="act_wait_payment_price">금액 : 0원</string>
    <string name="act_hotel_serch">가장 가까운 호텔 검색</string>
    <string name="square_search_hint">검색어를 입력해주세요.</string>
    <string name="dialog_btn_text_confirm_confirm">위 이용약관과 개인정보취급방침을 모두
확인하였으며, 모든 항목에 동의 합니다.</string>
    <string name="title_activity_get_pass">GetPassActivity</string>
    <string name="alarm">님의 이메일로\n
임시비밀번호가 발급되었습니다.
</string>
    <string name="payment_info">결제정보</string>
    <string name="pay_type">결제방식</string>
    <string name="pay_card">신용카드</string>
    <string name="pay_phone">휴대폰</string>
    <string name="pay_ars">ARS</string>
    <string name="pay_time">결제일시</string>
    <string name="pay_email">결제내역 이메일</string>
    <string name="approval_number">승인번호</string>
    <string name="card_type">카드종류</string>
    <string name="installment_period">할부기간</string>
    <string name="payment_price">결제금액</string>
    <string name="pay_bankbook">계좌이체</string>
    <string name="bankbook_type">은행명</string>
    <string name="pay_account">무통장입금</string>
    <string name="account_number">입금계좌</string>
    <string name="deposit_name">예금주명</string>
    <string name="deposit_price">입금금액</string>
    <string name="deposit_person">입금자명</string>
    <string name="deposit_period">입금기한</string>
    <string name="reservation_info_explain">"입금 순서대로 예약이 확정되며,
객실 예약이 조기에 마감될 수 있습니다.
마감시 입금하신 계좌로 전액 환불됩니다."</string>
    <string name="reservation_info">예약정보</string>
    <string name="booked_person">예약자명</string>
    <string name="booking_price">판매금액</string>
    <string name="use_reserve_money">사용적립금</string>
    <string name="coupon_money">쿠폰사용</string>
    <string name="hotel_info">호텔정보</string>
    <string name="hotel_name">호텔명</string>
    <string name="address">주소</string>
    <string name="refund_policy">환불규정</string>
</resources>
