<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20.0dip">

        <TableLayout
            android:id="@id/login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_setting_table"
            android:stretchColumns="\ 1">

            <TableRow android:id="@id/btn_location">

                <EditText
                    android:id="@id/email"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_no_style"
                    android:gravity="left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingTop="15.0dip"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="15.0sp"
                    android:textCursorDrawable="@null"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_height="1.0dip"
                android:background="#ffc4c3c3">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_span="2"
                    android:text="" />
            </TableRow>

            <TableRow android:id="@id/btn_notification">

                <EditText
                    android:id="@id/passwd"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_no_style"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingTop="10.0dip"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="15.0sp"
                    android:textCursorDrawable="@null"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/button_round_signin"
            android:text="@string/login"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/joinlayout"
            android:layout_marginTop="15.0dip"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_forgot_password"
                android:textColor="@color/white"
                android:textSize="13.0sp" />

            <TextView
                android:id="@id/btn_resetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:clickable="true"
                android:text="@string/reset_password_click"
                android:textColor="@color/white"
                android:textSize="14.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/joinlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_form"
            android:layout_marginTop="15.0dip"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_already_not_member2"
                android:textColor="@color/white"
                android:textSize="13.0sp" />
        </LinearLayout>

        <Button
            android:id="@id/btn_join"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/button_round_signin"
            android:text="@string/signup"
            android:textSize="15.0sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>