<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20.0dip">

        <TableLayout
            android:id="@id/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/border_login_table"
            android:padding="20.0dip"
            android:stretchColumns="\ 1">

            <TableRow>

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center"
                    android:padding="3.0dip"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_setting_table"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10.0dip"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="15.0sp" />
            </TableRow>

            <TableRow android:layout_marginTop="10.0dip">

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center"
                    android:padding="3.0dip"
                    android:src="@drawable/ic_passwd" />

                <EditText
                    android:id="@id/passwd"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/border_setting_table"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10.0dip"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textSize="15.0sp" />
            </TableRow>

            <TableRow android:layout_marginTop="13.0dip">

                <Button
                    android:id="@id/btn_signin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:background="@drawable/button_round_signin"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="80.0dip"
                    android:paddingRight="80.0dip"
                    android:paddingTop="15.0dip"
                    android:text="@string/login"
                    android:textSize="15.0sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@id/joinlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tablelayout"
            android:layout_marginTop="15.0dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_already_not_member"
                android:textColor="#ffaaaaaa"
                android:textSize="13.0sp" />

            <TextView
                android:id="@id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:clickable="true"
                android:text="@string/signup"
                android:textColor="#ffaaaaaa"
                android:textSize="15.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/joinlayout"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_forgot_password"
                android:textColor="#ffaaaaaa"
                android:textSize="13.0sp" />

            <TextView
                android:id="@id/btn_resetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:clickable="true"
                android:text="@string/reset_password"
                android:textColor="#ffaaaaaa"
                android:textSize="15.0sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>