<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@id/open_stanby_bg_fnb"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@id/textLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_wait_timer_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefix_wait_timer_frag_todays_hotel_open"
                android:textColor="@color/waitfragment_maintext"
                android:textSize="18.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@id/tv_wait_timer_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.0dip"
                android:gravity="center"
                android:lineSpacingExtra="2.0dip"
                android:text="@string/frag_wait_timer_hotel_msg"
                android:textColor="@color/waitfragment_subtext"
                android:textSize="16.0dip" />
        </LinearLayout>

        <TextView
            android:id="@id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@id/textLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15.0dip"
            android:gravity="center"
            android:textColor="@color/waitfragment_number"
            android:textSize="60.0dip" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/alarmTimerLayout"
        android:layout_width="fill_parent"
        android:layout_height="55.0dip"
        android:layout_alignParentBottom="true"
        android:layout_margin="25.0dip"
        android:background="@drawable/open_stanby_btn_alert"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@id/alarmImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/open_stanby_ic_alert" />

        <TextView
            android:id="@id/alarmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11.0dip"
            android:gravity="center"
            android:text="@string/frag_wait_timer_on"
            android:textColor="@android:color/white"
            android:textSize="18.0dip" />
    </LinearLayout>
</RelativeLayout>